# ccu-nds-workshop

./: .devcontainer.json  .gitignore  Dockerfile  ccu-nds-presentation.key  installation-linux.md  installation-mac-linux.md  installation-mac.md  installation-windows.md  presentation.md  readme.md
demos/buttons/: buttons.aseprite  convert-assets.sh  readme.md
demos/ccu-logo/: CMakeLists.txt  Makefile
demos/guitargrip/: CMakeLists.txt  convert-assets.sh
demos/guitargrip/assets/: convert.sh
demos/guitargrip/source/: main.cpp
template/source/: main.cpp
tutorials-complete/1-console/: readme.md
tutorials-complete/2-sprites-and-touch/: readme.md
tutorials-complete/3-buttons/: Makefile  readme.md
tutorials-complete/4-backgrounds/: readme.md
tutorials-complete/5-animation/: Makefile
tutorials-complete/5-arrays/: readme.md
tutorials-complete/5-backgrounds/: readme.md
tutorials-complete/8-animation-3d/: fire-sparks-gif.aseprite  fire-sparks.aseprite  readme.md
tutorials-complete/8-playing-sounds/: background.map  convert-assets.sh  readme.md
tutorials-complete/9-playing-sounds/: readme.md
tutorials-complete/animation/: convert-assets.sh  readme.md
tutorials-complete/animation-3d/: readme.md
tutorials/2-drawing-sprites/: readme.md
tutorials/3-buttons/: convert-assets.sh  readme.md
tutorials/4-backgrounds/: convert-assets.sh  readme.md
tutorials/4-touch/: readme.md
tutorials/5-animation/: readme.md
tutorials/6-animation/: readme.md
tutorials/6-arrays/: readme.md
tutorials/7-animation/: readme.md  (+1 more)
tutorials/7-animation-3d/: readme.md
(+32 files in other folders)
